fix lift alignemt

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,16 @@
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+label {
+  align-self: center;
+  margin: 1rem;
+  display: flex;
+}
+label input {
+  margin: 0 1rem;
+}
 main {
   display: flex;
   align-items: flex-end;
@@ -9,7 +22,9 @@ main > div {
 main > div div {
   margin: 2rem;
 }
-
+.flex-row {
+  display: flex;
+}
 button {
   cursor: pointer;
   padding: 5px 2rem;
@@ -40,4 +55,13 @@ button {
 .flex {
   display: flex;
   flex-direction: row;
+}
+#lift-button-wrapper div{
+   display: flex;
+   flex-direction: column;
+   width: 100px;
+   height: 50px;
+}
+#lift-button-wrapper div button{
+  margin: 2px 0;
 }
